Updated code to run without any changes

--- a/workspace/3-gatk-variant-filtration_VETS.ipynb
+++ b/workspace/3-gatk-variant-filtration_VETS.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "# Set your workspace bucket variable for this notebook.\n",
     "import os\n",
-    "# BUCKET = os.environ['WORKSPACE_BUCKET']"
+    "BUCKET = os.environ['WORKSPACE_BUCKET']"
    ]
   },
   {
